2006-11-08  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* site/news.ihtml (Preferably): typos, move chunks to old news.

2006-11-07  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* site/news.ihtml (Preferably): .29

2006-11-03  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* site/announce-v2.10.html: use &mdash
	don't use <pre> 

	* site/news.ihtml (href): 2.9.28

2006-11-01  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* site/announce-v2.10.html: suggestions by Cameron Horsburgh.

	* site/index.html: remove typo.

2006-10-31  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* site/announce-v2.10.html: update
	tweaks.

2006-10-28  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* site/news.ihtml (href): 2.9.27

2006-10-23  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* site/news.ihtml (href): close parenthesis.
	(Preferably): typo.

2006-10-22  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* site/news.ihtml (Preferably): typo.

2006-10-22  John Mandereau  <john.mandereau@free.fr>

	* fr/about/pubs.html: update translation (add erik's thesis).

2006-10-21  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* site/news.ihtml (href): 2.9.26
	(href): announce thesis availability.

2006-10-20  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* site/news.ihtml (Preferably): fix date. 

	* site/announce-v2.10.html: new file.

	* site/about/pubs.html (href): add erik's thesis.

2006-10-18  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* site/news.ihtml (href): 2.9.25

	* site/install/devel.ihtml: add x86_64

2006-10-15  John Mandereau  <john.mandereau@free.fr>

	* site/install/using.html, fr/install/using.html,
	nl/install/using.html: fix mailto:lilypond-user@gnu.org link.

	* fr/switch/advantages.html: update translation.

	* fr/index.html, fr/about/faq.html, fr/switch/tour.html,
	fr/switch/howto.html, fr/switch/new-notation.html: fix
	"Translation of CVS Revision" number (translation was already
	updated).

2006-10-15  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* site/news.ihtml (href): 2.9.24
