@@ -31,13 +31,13 @@ Source code is available
       alt="savannah.gnu.org"></a>
       
   <li>
-    By CVS from
-    <a href="http://savannah.gnu.org/cvs/?group=lilypond">savannah.gnu.org</a>
+    By <a href="http://git.or.cz/">git</a> from
+    <a href="http://repo.or.cz/w/lilypond.git">repo.or.cz</a>
     <pre>
-      CVS_RSH=ssh cvs -z3 -d:pserver:anonymous@cvs.sv.gnu.org:/sources/lilypond co lilypond
+       git clone git://repo.or.cz/lilypond.git
     </pre>
     <p>
-      The CVS repository does not contain generated files.  To
+      The checkout does not contain generated files.  To
       create <code>configure</code>, run
       <blockquote>
 	<pre>
