@@ -59,27 +59,25 @@ our page about
   procedure
 </p>
 <ul>
-  <li>Check out the latest sources from
-    <a href="http://savannah.gnu.org/cvs/?group=lilypond">CVS</a>.
+  <li>Check out the latest sources via GIT at 
+    <a href="http://repo.or.cz/w/lilypond.git/">repo.or.cz</a>.
 
     <pre>
-      export CVS_RSH=ssh
-      cvs -z3 -d :pserver:anonymous@cvs.sv.gnu.org:/sources/lilypond co lilypond
+       git clone git://repo.or.cz/lilypond.git
     </pre>
 
   <li>Make your changes,
 
-  <li>Add an entry to the <tt>ChangeLog</tt> file (In Emacs: <tt>C-x 4 a</tt>)
-
   <li>Create a patch:
     <pre>
-      cd lilypond/   # go to the top of the source tree 
-      cvs diff -u &gt; patch
+      git commit
+      git show HEAD > mypatch
     </pre>
-    
-  <li>Send an email with the ChangeLog at the top, and the patch
-    attached to <tt>lilypond-devel@gnu.org</tt>, or to one of the
-    maintainers.
+
+  <li>Send an email to <a
+    href="http://post.gmane.org/post.php?group=gmane.comp.gnu.lilypond.devel"><tt>lilypond-devel@gnu.org</tt></a>,
+    attaching the patch.
+  
 </ul>
 
 
